plugins { id 'java' }

group = 'fr.teamdeltaisland'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 8
}

jar {
    archiveFileName = 'DinosaursForHirePatcher.jar'
    manifest { attributes 'Main-Class': 'fr.teamdeltaisland.patcher.PatcherApplication' }
    doLast {
        copy {
            from archiveFile
            into layout.projectDirectory
        }
    }
}

processResources {
    from('Image.png')
}

tasks.register('verifyPatch', JavaExec) {
    dependsOn classes, compileTestJava
    classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
    mainClass = 'fr.teamdeltaisland.patcher.PatchVerificationTest'
    args file("Tom Mason's Dinosaurs for Hire (USA).md"), file('Dinosaurs For Hire FR Finale.bin')
}

tasks.register('verifyJar') {
    dependsOn jar
    doLast {
        def jarFile = jar.archiveFile.get().asFile
        new java.util.jar.JarFile(jarFile).withCloseable { zip ->
            assert zip.getEntry('Image.png') != null
            assert zip.getEntry('patch/translation.dfhp.b64') != null
            assert zip.manifest.mainAttributes.getValue('Main-Class') ==
                    'fr.teamdeltaisland.patcher.PatcherApplication'
        }
    }
}

check.dependsOn verifyPatch, verifyJar
